Gets rid of the warning message about an illegal reflective access